@@ -1,3 +1,8 @@
+2001-07-03  Sam Steingold  <sds@gnu.org>
+
+	tweak the 2001-06-27 patch
+	* debug.d (read_form): ignore only whitespace
+
 2001-06-29  Sam Steingold  <sds@gnu.org>
 
 	command-oriented-history-2
@@ -37,7 +42,7 @@
 2001-06-27  Sam Steingold  <sds@gnu.org>
 
 	non-whole byte i/o finally works
-	* stream.d (rd_by_aux_icx_buffered): fixed
+	* stream.d (rd_by_aux_icx_buffered): fixed (rewrote)
 
 2001-06-25  Bruno Haible  <haible@clisp.cons.org>
 
